--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ holi
       <li><a href="pages/eventos.html">Eventos y Contacto</a></li>
       <li><a href="pages/iniciarSesion.html">Iniciar sesión</a></li>
       <li><a href="pages/registrarse.html">Registrarse</a></li>
+      <li><a href="pages/contactos.html">Contacto</a></li>
     </ul>
   </nav>
 
