--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ nav li a:hover {
 <body>
     
     
-holi
+
 
 <nav>
     <ul>
@@ -63,6 +63,8 @@ holi
       <li><a href="pages/contactos.html">Contacto</a></li>
     </ul>
   </nav>
+
+  <h2> prueba</h2>
 
 </body>
 </html>
