--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -4,6 +4,85 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+<style>
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
+}
+
+header {
+    background-color: #ff6347;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+}
+
+nav a {
+    color: white;
+    margin: 0 15px;
+    text-decoration: none;
+}
+
+main {
+    padding: 20px;
+}
+
+.promocion {
+    display: flex;
+    justify-content: space-between;
+    background-color: white;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    margin-bottom: 20px;
+    padding: 15px;
+}
+
+.texto-promocion {
+    flex: 1;
+}
+
+.promocion img {
+    max-width: 100px; /* Ajusta el tamaño según necesites */
+    height: auto;
+    border-radius: 8px;
+    margin-left: 20px; /* Espacio entre el texto y la imagen */
+}
+
+button {
+    background-color: #10d320;
+    border: none;
+    color: black;
+    padding: 10px 15px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #726c6b;
+}
+
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #333;
+    color: white;
+    position: relative;
+    width: 100%;
+    bottom: 0;
+}
+
+
+
+</style>
+
+<script type> function registrarInteres(promoId) {
+    alert(`Te has registrado para recibir información sobre: ${promoId}`);
+    // código para enviar la información 
+}
+</script>
+
 </head>
 <body>
     <header>
