--- a/index.html
+++ b/index.html
@@ -1,58 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../styles.css" rel="stylesheet" type="text"> 
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles.css">
+  <title>Document</title>
 </head>
-
-<style>
-  /* Estilos generales para la página */
-body {
-  font-family: Arial, sans-serif;
-  margin: 0;
-  padding: 0;
-}
-
-/* Estilos para la barra de navegación */
-nav {
-  background-color: #f2f2f2; /* Color de fondo de la barra */
-  overflow: hidden; /* Oculta cualquier contenido que exceda el ancho */
-}
-
-nav ul {
-  list-style-type: none; /* Elimina los marcadores de lista */
-  margin: 0;
-  padding: 0;
-  display: flex; /* Organiza los elementos de la lista en una fila */
-  justify-content: center; /* Centra los elementos horizontalmente */
-}
-
-nav li {
-  float: left; /* Hace que cada elemento de la lista flote a la izquierda */
-}
-
-nav li a {
-  display: block; /* Hace que cada enlace ocupe toda el área del elemento de lista */
-  color: #333; /* Color del texto de los enlaces */
-  text-align: center; /* Centra el texto dentro de cada enlace */
-  padding: 14px 16px; /* Espacio interno del enlace */
-  text-decoration: none; /* Quita la decoración subrayada de los enlaces */
-}
-
-/* Estilos para los enlaces activos (opcional) */
-nav li a:hover {
-  background-color: #ddd; /* Cambia el color de fondo al pasar el ratón */
-}
-</style>
-
 <body>
-    
-    
-
-
-<nav>
+  <nav>
     <ul>
       <li><a href="pages/reservaciones.html">Reservaciones</a></li>
       <li><a href="pages/promociones.html">Promociones</a></li>
@@ -64,7 +20,6 @@ nav li a:hover {
     </ul>
   </nav>
 
-  <h2> prueba</h2>
-
 </body>
+
 </html>
