--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Restaurante El Paraíso</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <link rel="stylesheet" href="contactos.css"> 
 </head>
-<body>
-    a
+
+<body class="bg-yellow-50">
+    <header class="header">
+        <h1 class="header-title">Restaurante El Paraíso</h1>
+        <p class="header-subtitle">¡Estamos aquí para servirte!</p>
+    </header>
+
+    <section class="main-container">
+        <div class="contact-form">
+            <h2 class="form-title">Contáctanos</h2>
+            <p class="form-description">Queremos escuchar tus comentarios y ayudarte en lo que necesites.</p>
+            <form action="#" method="POST" class="form-fields">
+                <div>
+                    <label for="name" class="form-label">Nombre</label>
+                    <input type="text" id="name" name="name" class="form-input" required>
+                </div>
+
+                <div>
+                    <label for="email" class="form-label">Correo Electrónico</label>
+                    <input type="email" id="email" name="email" class="form-input" required>
+                </div>
+
+                <div>
+                    <label for="message" class="form-label">Mensaje</label>
+                    <textarea id="message" name="message" rows="4" class="form-input" required></textarea>
+                </div>
+
+                <button type="submit" class="submit-button">Enviar Mensaje</button>
+            </form>
+
+            <!--iconos -->
+            <div class="social-media-icons">
+                <p class="form-description">También puedes contactarnos por redes sociales:</p>
+                <div class="icons-container">
+                    <a href="https://wa.me/" target="_blank" class="icon whatsapp">
+                        <i class="fab fa-whatsapp"></i>
+                    </a>
+                    <a href="https://www.facebook.com" target="_blank" class="icon facebook">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+                    <a href="tel:+123456789" class="icon phone">
+                        <i class="fas fa-phone-alt"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="about-us">
+            <div class="about-text">
+                <h2 class="about-title">Sobre nosotros</h2>
+                <div class="about-content">
+                    <p>
+                        En el corazón de la ciudad, donde la tradición y la modernidad se encuentran,<br>
+                        se alza "El Paraíso", un lugar donde los sentidos se deleitan y los sabores cobran vida.<br>
+                        Fundado en 1998, nuestro restaurante es un santuario gastronómico,<br>
+                        nacido del sueño de una familia apasionada por la cocina<br>
+                        y el deseo de crear un espacio donde cada visitante<br>
+                        se sienta como en casa.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer class="footer">
+        <p>Restaurante El Paraíso &copy; 2024. Todos los derechos reservados.</p>
+    </footer>
 </body>
+
 </html>
