--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -7,7 +7,7 @@
     <title>Restaurante El Paraíso</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="contactos.css"> 
+    <link rel="stylesheet" href="/css/contactos.css"> 
 </head>
 
 <body class="bg-yellow-50">
