--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -12,7 +12,7 @@
 
 <body class="bg-yellow-50">
     <header class="header">
-        <h1 class="header-title">Restaurante El Paraíso</h1>
+        <h1 class="header-title">Restaurante El Paraísoo</h1>
         <p class="header-subtitle">¡Estamos aquí para servirte!</p>
     </header>
 
