--- a/pages/promociones.html
+++ b/pages/promociones.html
@@ -85,6 +85,19 @@ footer {
 
 </head>
 <body>
+
+    <nav>
+        <ul>
+          <li><a href="pages/reservaciones.html">Reservaciones</a></li>
+          <li><a href="pages/promociones.html">Promociones</a></li>
+          <li><a href="pages/pedidos.html">Pedidos</a></li>
+          <li><a href="pages/eventos.html">Eventos</a></li>
+          <li><a href="pages/iniciarSesion.html">Iniciar sesión</a></li>
+          <li><a href="pages/registrarse.html">Registrarse</a></li>
+          <li><a href="pages/contactos.html">Contacto</a></li>
+        </ul>
+      </nav>
+
     <header>
         <h1>Promociones Especiales</h1>
         <nav>
