--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -201,6 +201,19 @@ body {
 
 
 <body class="bg-yellow-50">
+
+    <nav>
+        <ul>
+          <li><a href="pages/reservaciones.html">Reservaciones</a></li>
+          <li><a href="pages/promociones.html">Promociones</a></li>
+          <li><a href="pages/pedidos.html">Pedidos</a></li>
+          <li><a href="pages/eventos.html">Eventos</a></li>
+          <li><a href="pages/iniciarSesion.html">Iniciar sesión</a></li>
+          <li><a href="pages/registrarse.html">Registrarse</a></li>
+          <li><a href="pages/contactos.html">Contacto</a></li>
+        </ul>
+      </nav>
+    
     <header class="header">
         <h1 class="header-title">Restaurante El Paraíso</h1>
         <p class="header-subtitle">¡Estamos aquí para servirte!</p>
