--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -123,7 +123,7 @@ body {
 </style>
 
 <body>
-    
+    <section class="1">
     <nav>
         <ul>
           <li><a href="pages/reservaciones.html">Reservaciones</a></li>
@@ -135,7 +135,7 @@ body {
           <li><a href="pages/contactos.html">Contacto</a></li>
         </ul>
       </nav>
-
+    </section>
       <div class="login-container">
         <div class="login-card">
             <div class="login-header">
