--- a/pages/menu.html
+++ b/pages/menu.html
@@ -1,23 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+  <link href="../css/menu.css" rel="stylesheet" type="text/css">
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
     
-    <nav>
-        <ul>
-          <li><a href="pages/reservaciones.html">Reservaciones</a></li>
-          <li><a href="pages/promociones.html">Promociones</a></li>
-          <li><a href="pages/pedidos.html">Pedidos</a></li>
-          <li><a href="pages/eventos.html">Eventos</a></li>
-          <li><a href="pages/iniciarSesion.html">Iniciar sesión</a></li>
-          <li><a href="pages/registrarse.html">Registrarse</a></li>
-          <li><a href="pages/contactos.html">Contacto</a></li>
-        </ul>
-      </nav>
+  <nav>
+    <ul>
+      <li><a href="../pages/reservaciones.html">Reservaciones</a></li>
+      <li><a href="../pages/promociones.html">Promociones</a></li>
+      <li><a href="../pages/pedidos.html">Pedidos</a></li>
+      <li><a href="../pages/eventos.html">Eventos</a></li>
+      <li><a href="../pages/iniciarSesion.html">Iniciar sesión</a></li>
+      <li><a href="../pages/registrarse.html">Registrarse</a></li>
+      <li><a href="../pages/contactos.html">Contacto</a></li>
+    </ul>
+  </nav>
 
 </body>
 </html>
