--- a/pages/contactos.html
+++ b/pages/contactos.html
@@ -18,13 +18,13 @@
 
     <nav>
         <ul>
-          <li><a href="/reservaciones.html">Reservaciones</a></li>
-          <li><a href="/promociones.html">Promociones</a></li>
-          <li><a href="/pedidos.html">Pedidos</a></li>
-          <li><a href="/eventos.html">Eventos</a></li>
-          <li><a href="/iniciarSesion.html">Iniciar sesión</a></li>
-          <li><a href="/registrarse.html">Registrarse</a></li>
-          <li><a href="/contactos.html">Contacto</a></li>
+          <li><a href="../pages/reservaciones.html">Reservaciones</a></li>
+          <li><a href="../pages/promociones.html">Promociones</a></li>
+          <li><a href="../pages/pedidos.html">Pedidos</a></li>
+          <li><a href="../pages/eventos.html">Eventos</a></li>
+          <li><a href="../pages/iniciarSesion.html">Iniciar sesión</a></li>
+          <li><a href="../pages/registrarse.html">Registrarse</a></li>
+          <li><a href="../pages/contactos.html">Contacto</a></li>
         </ul>
       </nav>
     
