--- a/index.html
+++ b/index.html
@@ -25,7 +25,38 @@
     </ul>
   </nav>
 
-b
+
+  <section class="hero"></section>
+    <h1>Bienvenidos a El Paraíso</h1>
+    <p>Disfruta de la mejor comida en un ambiente acogedor</p>
+    <img src="images/hero.jpg" alt="Imagen de la fachada del restaurante">
+    <button class="reservar">Reservar</button>
+  </section>
+
+  <section class="galeria">
+    <h2>Nuestros platos estrella</h2>
+    <div class="galeria-item">
+      <img src="images/plato1.jpg" alt="Imagen del plato 1">
+      <p>Ensalada de langostinos con salsa de limón</p>
+    </div>
+    <div class="galeria-item">
+      <img src="images/plato2.jpg" alt="Imagen del plato 2">
+      <p>Carpaccio de ternera con rúcula y parmesano</p>
+    </div>
+    <div class="galeria-item">
+      <img src="images/plato3.jpg" alt="Imagen del plato 3">
+      <p>Tortilla de patatas con cebolla caramelizada</p>
+    </div>
+  </section>
+
+  <footer>
+    <p>&copy; 2023 El Paraíso - Restaurante</p>
+    <ul>
+      <li><a href="https://www.facebook.com/elParaisoRestaurante">Facebook</a></li>
+      <li><a href="https://www.instagram.com/elParaisoRestaurante">Instagram</a></li>
+      <li><a href="https://www.twitter.com/elParaisoRestaurante">Twitter</a></li>
+    </ul>
+  </footer>
 
 </body>
 
