--- a/index.html
+++ b/index.html
@@ -50,12 +50,23 @@
   </section>
 
   <footer>
-    <p>&copy; 2023 El Paraíso - Restaurante</p>
-    <ul>
-      <li><a href="https://www.facebook.com/elParaisoRestaurante">Facebook</a></li>
-      <li><a href="https://www.instagram.com/elParaisoRestaurante">Instagram</a></li>
-      <li><a href="https://www.twitter.com/elParaisoRestaurante">Twitter</a></li>
-    </ul>
+    <div class="footer-content">
+      <h3>El Paraíso</h3>
+      <p>Dirección: Calle Falsa 123, Ciudad</p>
+      <p>Teléfono: (123) 456-7890</p>
+      <p>Email: contacto@elparaiso.com</p>
+    </div>
+    <div class="footer-links">
+      <h4>Síguenos en nuestras redes sociales</h4>
+      <ul>
+        <li><a href="https://www.facebook.com/ElParaiso" target="_blank">Facebook</a></li>
+        <li><a href="https://www.instagram.com/ElParaiso" target="_blank">Instagram</a></li>
+        <li><a href="https://www.twitter.com/ElParaiso" target="_blank">Twitter</a></li>
+      </ul>
+    </div>
+    <div class="footer-bottom">
+      <p>&copy; 2023 El Paraíso. Todos los derechos reservados.</p>
+    </div>
   </footer>
 
 </body>
