--- a/pages/pedidos.html
+++ b/pages/pedidos.html
@@ -20,5 +20,29 @@
       <li><a href="../pages/contactos.html">Contacto</a></li>
     </ul>
   </nav>
+
+
+  <h1>Registrar Pedido a Domicilio</h1>
+  <div class="form-container">
+      <form action="#" method="post">
+          <label for="nombre">Nombre:</label>
+          <input type="text" id="nombre" name="nombre" required>
+
+          <label for="direccion">Dirección:</label>
+          <input type="text" id="direccion" name="direccion" required>
+
+          <label for="telefono">Teléfono:</label>
+          <input type="text" id="telefono" name="telefono" required>
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+
+          <label for="pedido">Detalles del Pedido:</label>
+          <textarea id="pedido" name="pedido" rows="4" required></textarea>
+
+          <button type="submit">Enviar Pedido</button>
+      </form>
+  </div>
+
 </body>
 </html> 
