--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
       <h3>El Paraíso</h3>
       <p>Dirección: 123, Ciudad</p>
       <p>Teléfono: (123) 456-7890</p>
-      <p>Email: contacto@elparaiso.com</p>
     </div>
     <div class="footer-links">
       <h4>Síguenos en nuestras redes sociales</h4>
@@ -67,7 +66,7 @@
       <p>&copy; 2023 El Paraíso. Todos los derechos reservados.</p>
     </div>
     <div class="footer-bottom">
-      <p>Desarrollado por: <a href="https://www.linkedin.com/in/alejandro-rosales-ramirez/" target="_blank">Alejandro Rosales</a></p> 
+      <p>Desarrollado por:  </a></p> 
     </div>
     <div class="footer-bottom">
       <p>Correo: <a href="mailto:contacto@elparaiso.com" target="_blank">contacto@elparaiso.com</a></p> 
