--- a/pages/registrarse.html
+++ b/pages/registrarse.html
@@ -1,14 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
     <link href="../css/registrarse.css" rel="stylesheet" type="text/css">
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro</title>
-
-
     <script>
         function showRegistrationMessage(event) {
             event.preventDefault(); 
@@ -16,11 +12,8 @@
         }
     </script>
 </head>
-
-
-
 <body>
-    <section class="1">
+    <section class="section-nav">
         <nav>
             <ul>
               <li><a href="../pages/reservaciones.html">Reservaciones</a></li>
@@ -32,9 +25,8 @@
               <li><a href="../pages/contactos.html">Contacto</a></li>
             </ul>
           </nav>
-
     </section>
-      <div class="login-container">
+    <div class="login-container">
         <div class="login-card">
             <div class="login-header">
                 <img src="https://cdn-icons-png.flaticon.com/512/433/433036.png" alt="Login Icon">
@@ -59,12 +51,8 @@
                 <a href="#">¿No tienes una cuenta?</a>
                 <a href="#">¿Se te olvidó tu contraseña?</a>
             </div>
-            <p class="credit">Sitio de <a
-                    href="https://www.tripadvisor.es/Restaurants-g294476-San_Salvador_San_Salvador_Department.html"
-                    target="_blank">Mejores restaurantes</a></p>
+            <p class="credit">Sitio de <a href="https://www.tripadvisor.es/Restaurants-g294476-San_Salvador_San_Salvador_Department.html" target="_blank">Mejores restaurantes</a></p>
         </div>
     </div>
-
-
 </body>
 </html>
